<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:gravity="center"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".SignUp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOGIN HERE"
            android:textSize="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >



            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight="8"
                android:background="@drawable/edittext_rounded"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signin_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_action_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:hint="Email"

                    />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >



            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight="8"
                android:background="@drawable/edittext_rounded"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signin_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="Password"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_action_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                     />
            </android.support.design.widget.TextInputLayout>



        </LinearLayout>




        <Button
            android:id="@+id/btn_signIn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="9dp"
            android:background="@color/colorNew"
            android:text="LOGIN"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.gms.common.SignInButton
                android:layout_width="wrap_content"
                android:id="@+id/signin_google"
                android:layout_height="wrap_content" >
            </com.google.android.gms.common.SignInButton>



        </LinearLayout>

        <TextView
            android:layout_marginTop="5dp"
            android:fontFamily="@font/lobster"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/actReg"
            android:layout_gravity="center"
            android:text="Don't Have an Account? REGISTER Here."/>




    </LinearLayout>







</LinearLayout>
