<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="18dp"
android:paddingLeft="18dp"
android:gravity="center"
android:paddingRight="18dp"
android:paddingTop="18dp"
tools:context=".SignUp">


    <LinearLayout
        android:id="@+id/email_sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="vertical">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REGISTER HERE"
            android:textSize="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight="8"
                android:background="@drawable/edittext_rounded"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableLeft="@drawable/ic_action_person"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:hint="Name"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight="8"
                android:background="@drawable/edittext_rounded"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableLeft="@drawable/ic_action_email"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight="8"
                android:background="@drawable/edittext_rounded"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_action_password"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight="8"
                android:background="@drawable/edittext_rounded"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_confirmPassword"
                    android:layout_width="match_parent"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_action_cpassword"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:text="Gender"/>


            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_margin="10dp"
                >

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Female" />


            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btn_signUp"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@color/colorNew"
            android:text="SIGN UP"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <TextView
            android:layout_marginTop="5dp"
            android:fontFamily="@font/lobster"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/actLogin"
            android:layout_gravity="center"
            android:text="Already Have an Account? SIGNIN Here."/>

    </LinearLayout>





</RelativeLayout>
