<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/OldUsernameTextView"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded"
        android:padding="15dp"
        android:layout_margin="5dp"
       >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/updateUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_action_person"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:textSize="20dp"
            android:hint="Name"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_margin="10dp"
        android:id="@+id/updateUsernameButton"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@color/colorNew"
        android:text="Update"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


</LinearLayout>